ref on susy+higher form sym

--- a/paper.tex
+++ b/paper.tex
@@ -305,6 +305,10 @@ This mapping was given a further check e.g.~by using supersymmetric localization
 Our analysis allows us to check this duality by comparing how the 1-form symmetry and the 0-form symmetry are combined in the dual pairs.
 We superimposed the action of the duality on our main Table~\ref{table:main}.
 It is satisfying to see that the duality action correctly preserves the behaviors `none', `anomaly' and `extension'.
+In the last couple of years, the study of higher symmetries and their anomalies of supersymmetric theories has seen some activity\footnote{%
+See e.g.~\cite{Tachikawa:2019dvq,Eckhard:2019jgg,Morrison:2020ool,Albertini:2020mdx,Apruzzi:2020zot,Cvetic:2020kuw,Gukov:2020btk,DelZotto:2020esg,DelZotto:2020sop,Bhardwaj:2020phs,Bhardwaj:2021pfz,Apruzzi:2021vcu,Cvetic:2021sxm,Apruzzi:2021phx,Bhardwaj:2021zrt,Buican:2021xhs,Braun:2021sex,Cvetic:2021maf}.},
+but mostly from the point of view of string theory or M-theory.
+The authors hope that this paper paves a way toward a more field-theoretical analysis of these matters.
 
 The rest of the paper is organized as follows.
 In Sec.~\ref{sec:2-group},
