--- a/ref.bib
+++ b/ref.bib
@@ -341,10 +341,10 @@ MRREVIEWER = {J. F. Adams},
 
 
 
-@article{Witten:2003ya,
+@inproceedings{Witten:2003ya,
     author = "Witten, Edward",
-    editor = "Shifman, M. and Vainshtein, A. and Wheater, J.",
     title = "{$SL(2,Z)$ Action on Three-Dimensional Conformal Field Theories with Abelian Symmetry}",
+    booktitle = "{From Fields to Strings: Circumnavigating Theoretical Physics: a Conference in Tribute to Ian Kogan}",
     eprint = "hep-th/0307041",
     archivePrefix = "arXiv",
     pages = "1173--1200",
@@ -403,8 +403,255 @@ MRREVIEWER = {J. F. Adams},
     archivePrefix = "arXiv",
     primaryClass = "hep-th",
     reportNumber = "IPMU-20-0093",
+    doi = "10.21468/SciPostPhys.10.3.061",
+    journal = "SciPost Phys.",
+    volume = "10",
+    pages = "061",
+    year = "2021"
+}
+
+
+
+@article{Bhardwaj:2021zrt,
+    author = "Bhardwaj, Lakshya and Hubner, Max and Schafer-Nameki, Sakura",
+    title = "{Liberating Confinement from Lagrangians: 1-form Symmetries and Lines in 4d $\mathcal{N}=1$ from 6d $\mathcal{N}=(2,0)$}",
+    eprint = "2106.10265",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "6",
+    year = "2021"
+}
+
+
+
+@article{Apruzzi:2021vcu,
+    author = "Apruzzi, Fabio and Bhardwaj, Lakshya and Oh, Jihwan and Schäfer-Nameki, Sakura",
+    title = "{The Global Form of Flavor Symmetries and 2-Group Symmetries in 5D SCFTs}",
+    eprint = "2105.08724",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "5",
+    year = "2021"
+}
+
+
+
+@article{Bhardwaj:2021pfz,
+    author = "Bhardwaj, Lakshya and Hubner, Max and Schäfer-Nameki, Sakura",
+    title = "{1-Form Symmetries of 4D ${\mathcal{N}}\!=2$ Class S Theories}",
+    eprint = "2102.01693",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "2",
+    year = "2021"
+}
+
+
+
+@article{Bhardwaj:2020phs,
+    author = {Bhardwaj, Lakshya and Schäfer-Nameki, Sakura},
+    title = "{Higher-form symmetries of 6d and 5d theories}",
+    eprint = "2008.09600",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP02(2021)159",
+    journal = "JHEP",
+    volume = "02",
+    pages = "159",
+    year = "2021"
+}
+
+
+
+@article{DelZotto:2020sop,
+    author = "Del Zotto, Michele and Ohmori, Kantaro",
+    title = "{2-Group Symmetries of 6D Little String Theories and T-Duality}",
+    eprint = "2009.03489",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "9",
+    year = "2020"
+}
+
+
+
+@article{DelZotto:2020esg,
+    author = "Del Zotto, Michele and Garc\'\i{}a Etxebarria, I{\~n}aki and Hosseini, Saghar S.",
+    title = "{Higher form symmetries of Argyres-Douglas theories}",
+    eprint = "2007.15603",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP10(2020)056",
+    journal = "JHEP",
+    volume = "10",
+    pages = "056",
+    year = "2020"
+}
+
+
+
+@article{Albertini:2020mdx,
+    author = "Albertini, Federica and Del Zotto, Michele and Garc\'\i{}a Etxebarria, I{\~n}aki and Hosseini, Saghar S.",
+    title = "{Higher Form Symmetries and M-theory}",
+    eprint = "2005.12831",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP12(2020)203",
+    journal = "JHEP",
+    volume = "12",
+    pages = "203",
+    year = "2020"
+}
+
+
+
+@article{Apruzzi:2021phx,
+    author = {Apruzzi, Fabio and van Beest, Marieke and Gould, Dewi S. W. and Sch\"afer-Nameki, Sakura},
+    title = "{Holography, 1-Form Symmetries, and Confinement}",
+    eprint = "2104.12764",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "4",
+    year = "2021"
+}
+
+
+
+@article{Morrison:2020ool,
+    author = "Morrison, David R. and Schäfer-Nameki, Sakura and Willett, Brian",
+    title = "{Higher-Form Symmetries in 5D}",
+    eprint = "2005.12296",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP09(2020)024",
+    journal = "JHEP",
+    volume = "09",
+    pages = "024",
+    year = "2020"
+}
+
+
+
+@article{Eckhard:2019jgg,
+    author = "Eckhard, Julius and Kim, Heeyeon and Schäfer-Nameki, Sakura and Willett, Brian",
+    title = "{Higher-Form Symmetries, Bethe Vacua, and the 3D-3D Correspondence}",
+    eprint = "1910.14086",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP01(2020)101",
+    journal = "JHEP",
+    volume = "01",
+    pages = "101",
+    year = "2020"
+}
+
+
+
+@article{Gukov:2020btk,
+    author = "Gukov, Sergei and Hsin, Po-Shen and Pei, Du",
+    title = "{Generalized Global Symmetries of $T[M]$ Theories. I}",
+    eprint = "2010.15890",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "CALT-TH-2020-045",
+    month = "10",
+    year = "2020"
+}
+
+
+
+@article{Apruzzi:2020zot,
+    author = "Apruzzi, Fabio and Dierigl, Markus and Lin, Ling",
+    title = "{The Fate of Discrete 1-Form Symmetries in 6D}",
+    eprint = "2008.09117",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "CERN-TH-2020-132",
     month = "8",
     year = "2020"
+}
+
+
+
+@article{Cvetic:2020kuw,
+    author = "Cveti\v{c}, Mirjam and Dierigl, Markus and Lin, Ling and Zhang, Hao Y.",
+    title = "{String Universality and Non-Simply-Connected Gauge Groups in 8d}",
+    eprint = "2008.10605",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "CERN-TH-2020-138, UPR-1306-T",
+    doi = "10.1103/PhysRevLett.125.211602",
+    journal = "Phys. Rev. Lett.",
+    volume = "125",
+    number = "21",
+    pages = "211602",
+    year = "2020"
+}
+
+
+
+@article{Cvetic:2021sxm,
+    author = "Cveti{\v c}, Mirjam and Dierigl, Markus and Lin, Ling and Zhang, Hao Y.",
+    title = "{Higher-Form Symmetries and Their Anomalies in M-/F-Theory Duality}",
+    eprint = "2106.07654",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "CERN-TH-2021-091, UPR-1311-T, LMU-ASC 17/21",
+    month = "6",
+    year = "2021"
+}
+
+
+
+@article{Buican:2021xhs,
+    author = "Buican, Matthew and Jiang, Hongliang",
+    title = "{1-Form Symmetry, Isolated ${\mathcal{N}}\!=2$ Scfts, and Calabi-Yau Threefolds}",
+    eprint = "2106.09807",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "QMUL-PH-21-27",
+    month = "6",
+    year = "2021"
+}
+
+
+
+@article{Braun:2021sex,
+    author = "Braun, Andreas P. and Oehlmann, Paul-Konstantin and Larfors, Magdalena",
+    title = "{Gauged 2-Form Symmetries in 6D SCFTs Coupled to Gravity}",
+    eprint = "2106.13198",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "6",
+    year = "2021"
+}
+
+
+
+@article{Cvetic:2021maf,
+    author = "Cveti\v{c}, Mirjam and Heckman, Jonathan J. and Torres, Ethan and Zoccarato, Gianluca",
+    title = "{Reflections on the Matter of 3d $\mathcal{N} = 1$ Vacua and Local $Spin(7)$ Compactifications}",
+    eprint = "2107.00025",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "6",
+    year = "2021"
+}
+
+
+
+@article{Tachikawa:2019dvq,
+    author = "Tachikawa, Yuji and Zafrir, Gabi",
+    title = "{Reflection groups and 3d $\mathcal{N}\ge $ 6 SCFTs}",
+    eprint = "1908.03346",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "IPMU-19-0099",
+    doi = "10.1007/JHEP12(2019)176",
+    journal = "JHEP",
+    volume = "12",
+    pages = "176",
+    year = "2019"
 }
 
 
